3.2_Kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote-dog-cat-api
  labels:
    istio-injection: enabled
